--- a/login.html
+++ b/login.html
@@ -5,12 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        nav{
+            background-color: blue;
+            height: 50px;
+            display: flex;
+            justify-content: space-around;
+           
+        }
+        button{
+    
+            background-color: blue;
+            border: none;
+        }
+        a{
+            text-decoration: none;
+            color: white;
+        }
+    </style>
 </head>
 <body>
-    <nav>
-        <button><a href="shop.html"></a></button>
-        <button><a href="account.html"></a></button>
-        <button><a href="cart.html"></a></button>
-    </nav>
+    <button><a href="shop.html">Shop</a></button>
+    <button><a href="account.html">Account</a></button>
+    <button><a href="cart.html">Cart</a></button>
 </body>
 </html>
