--- a/index.html
+++ b/index.html
@@ -6,11 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    nav{
+        background-color: blue;
+        height: 50px;
+        display: flex;
+        justify-content: space-around;
+       
+    }
+    button{
+
+        background-color: blue;
+        border: none;
+    }
+    a{
+        text-decoration: none;
+        color: white;
+    }
+</style>
 <body>
     <nav>
-        <button><a href="shop.html"></a></button>
-        <button><a href="account.html"></a></button>
-        <button><a href="cart.html"></a></button>
+        <button><a href="shop.html">Shop</a></button>
+        <button><a href="account.html">Account</a></button>
+        <button><a href="cart.html">Cart</a></button>
     </nav>
 </body>
 </html>
