--- a/besbuy HTML/cart.html
+++ b/besbuy HTML/cart.html
@@ -33,6 +33,14 @@
        display: flex;
        justify-content: space-between;
    }
+   #cart a{
+       font-size: 20px;
+       color: white;
+       text-decoration: none;
+   }
+   #cart a:hover{
+       text-decoration: underline;
+   }
    #hr{
        width: 100%;
        height: 1px;
@@ -64,10 +72,23 @@
        color: white;
        text-decoration: none;
    }
+   #content{
+       display: flex;
+   }
+   #cartItem{
+       width: 70%;
+       height: 100%;
+   }
+   #checkout{
+       width: 30%;
+       height: 600px;
+       background-color: white;
+       box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+   }
    
 </style>
 </head>
-<body>
+<body bgcolor="#fff">
     <header>
         <div id="nav1">
             <img src="https://pisces.bbystatic.com/image2/BestBuy_US/Gallery/BestBuy_Logo_2020-190616.png;maxHeight=80;maxWidth=136">
@@ -77,7 +98,10 @@
                 <i class="fa-solid fa-magnifying-glass"></i>
             </form>
             <i class="fa-solid fa-map-location-dot"></i>
+            <div id="cart">
             <i class="fa-solid fa-cart-shopping"></i>
+            <a href="cart.html">Cart</a>
+            </div>
         </div>
         <div id="hr"></div>
         <div id="nav2">
@@ -95,5 +119,17 @@
             </div>
         </div>
     </header>
+    <div id="content">
+    <div id="cartItem">
+        <h2>Your Cart</h2>
+    </div>
+    <div id="checkout">
+        <h2>Your payment</h2>
+    </div>
+    </div>
 </body>
 </html>
+
+<script>
+
+</script>
