--- a/besbuy HTML/gift-card.html
+++ b/besbuy HTML/gift-card.html
@@ -6,66 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://kit.fontawesome.com/322b14b2ff.js" crossorigin="anonymous"></script>
-<style>
-   header{
-       height: 130px;
-       background-color: rgb(2, 39, 161);
-   }
-   #nav1{
-       display: flex;
-       justify-content: space-evenly;
-       padding: 20px;
-   }
-   #nav1>img{
-       width: 80px;
-       height: 40px;
-   }
-   #nav1 i{
-       font-size: 30px;
-       color: white;
-   }
-   #nav1 input{
-       width: 350px;
-       height: 30px;
-   }
-   form{
-       width: 380px;
-       display: flex;
-       justify-content: space-between;
-   }
-   #hr{
-       width: 100%;
-       height: 1px;
-       background-color: rgb(40, 79, 252);
-   }
-   #nav2{
-
-       display: flex;
-       justify-content: space-between;
-   }
-   #shop{
-       width: 45%;
-       display: flex;
-       justify-content: space-around;
-   }
-   #order{
-       width: 45%;
-       display: flex;
-       justify-content: space-around;
-   }
-   #shop a{
-       color: white;
-       text-decoration: none;
-   }
-   #shop a:hover{
-       text-decoration: underline;
-   }
-   #order a{
-       color: white;
-       text-decoration: none;
-   }
-   
-</style>
+    <link rel="stylesheet" href="/bestbuy css/navbar.css">
 </head>
 <body>
     <header>
