add all function

--- a/besbuy HTML/login.html
+++ b/besbuy HTML/login.html
@@ -130,4 +130,4 @@
 </body>
 
 </html>
-<script src="/bestbuy/bestbuy js/account.js"></script>
+<script src="/bestbuy/bestbuy js/login.js"></script>
