--- a/besbuy HTML/totaltech-membership.html
+++ b/besbuy HTML/totaltech-membership.html
@@ -42,7 +42,7 @@
     </header>
     <main>
         <div id="page-title">
-            <h1 class="page-title">Best Buy Totaltech™</h1>
+            <h3 class="page-title">Best Buy Totaltech™</h3>
         </div>
         <div id="alreary-member">
             <p>Already a member? <span>Go to your account to manage benefits and get support</span></p>
@@ -63,7 +63,7 @@
                 <button><i class="fa-solid fa-cart-shopping"></i>Add to Cart</button>
             </div>
             <div>
-                <img src="img/bestbuy1.jpg" alt="">
+                <img src="/bestbuy/img/bestbuy1.jpg" alt="">
             </div>
         </div>
     </main>
@@ -300,17 +300,19 @@
 
             </div>
             <div>
-                <i class="fa-regular fa-cube"></i><br>
-                <a href="">Check Your Order Status</a>
+
+                <p><i class="fa-solid fa-box"></i></p><br>
+                <a href="">Check Your Order Status</a> 
             </div>
             <div>
-                <i class="fa-regular fa-right-left"></i><br>
+
+                <p><i class="fa-solid fa-truck-moving"></i></p><br>
                 <a href="">Shipping, Delivery & Store Pickup</a>
                 
             </div>
             <div>
                 
-                <i class="fa-regular fa-truck"></i><br>
+                <p><i class="fa-solid fa-right-left"></i></p><br>
                 <a href="">Returns & Exchanges</a>
 
             </div>
