--- a/besbuy HTML/account.html
+++ b/besbuy HTML/account.html
@@ -6,18 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best Buy:Create an Account</title>
-    <link rel="stylesheet" href="/bestbuy/bestbuy css/account.css">
+    <link rel="stylesheet" href="/bestbuy css/account.css">
 </head>
 
 <body>
     <nav>
         <div>
             <div>
-                <a href="/bestbuy/besbuy HTML/index.html"><img src="https://www.bestbuy.com/~assets/bby/_com/header-footer/images/bby_logo-a7e90594729ed2e119331378def6c97e.png" alt="no image"></a>
+                <a href="/besbuy HTML/index.html"><img src="https://www.bestbuy.com/~assets/bby/_com/header-footer/images/bby_logo-a7e90594729ed2e119331378def6c97e.png" alt="no image"></a>
             </div>
             <div></div>
             <div>
-                <a href="/bestbuy/besbuy HTML/index.html">
+                <a href="/besbuy HTML/index.html">
                     <p>Return to previous page</p>
                 </a>
             </div>
@@ -55,7 +55,7 @@
         </p>
         <hr>
         <p id="signIn"><b> Already have an account?</b>
-            <a href="/bestbuy/besbuy HTML/login.html"> Sign in</a>
+            <a href="/besbuy HTML/login.html"> Sign in</a>
         </p>
     </div>
 
@@ -81,4 +81,4 @@
 </body>
 
 </html>
-<script src="/bestbuy/bestbuy js/account.js"></script>
+<script src="/bestbuy js/account.js"></script>
