--- a/besbuy HTML/login.html
+++ b/besbuy HTML/login.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In to Best Buy</title>
-    <link rel="stylesheet" href="/bestbuy/bestbuy css/account.css">
+    <link rel="stylesheet" href="/bestbuy css/account.css">
     <script src="https://kit.fontawesome.com/322b14b2ff.js" crossorigin="anonymous"></script>
     <style>
         #form #pass+p {
@@ -22,8 +22,12 @@
             color: black;
             font-size: 13px;
         }
-        #withApple i{
-            font-size: 23px;
+        #withApple i {
+            font-size: 24px;
+        }
+        #withWebAuthn img {
+            width: 30px;
+            height: 25px;
         }
 
         #withApple:hover {
@@ -41,13 +45,13 @@
     <nav>
         <div>
             <div>
-                <a href="/bestbuy/besbuy HTML/index.html"><img
+                <a href="/besbuy HTML/index.html"><img
                         src="https://www.bestbuy.com/~assets/bby/_com/header-footer/images/bby_logo-a7e90594729ed2e119331378def6c97e.png"
                         alt="no image"></a>
             </div>
             <div></div>
             <div>
-                <a href="/bestbuy/besbuy HTML/index.html">
+                <a href="/besbuy HTML/index.html">
                     <p>Return to previous page</p>
                 </a>
             </div>
@@ -105,7 +109,7 @@
         </p>
         <hr>
         <p id="signIn"><b> Don't have an account?</b>
-            <a href="/bestbuy/besbuy HTML/account.html"> Create an account</a>
+            <a href="/besbuy HTML/account.html"> Create an account</a>
         </p>
     </div>
 
@@ -130,4 +134,4 @@
 </body>
 
 </html>
-<script src="/bestbuy/bestbuy js/login.js"></script>
+<script src="/bestbuy js/login.js"></script>
