--- a/besbuy HTML/account.html
+++ b/besbuy HTML/account.html
@@ -13,7 +13,9 @@
     <nav>
         <div>
             <div>
-                <a href="/besbuy HTML/index.html"><img src="https://www.bestbuy.com/~assets/bby/_com/header-footer/images/bby_logo-a7e90594729ed2e119331378def6c97e.png" alt="no image"></a>
+                <a href="/besbuy HTML/index.html"><img
+                        src="https://www.bestbuy.com/~assets/bby/_com/header-footer/images/bby_logo-a7e90594729ed2e119331378def6c97e.png"
+                        alt="no image"></a>
             </div>
             <div></div>
             <div>
@@ -26,7 +28,7 @@
     <div id="strip"></div>
     <div id="createAccount">
         <h3>Create an Account</h3>
-        <p>Shopping for your business? <a href=""> Create a business account.</a></p>
+        <p class="para">Shopping for your business? <a href=""> Create a business account.</a></p>
         <form id="form">
             <input id="fName" type="text" placeholder="First Name">
             <input id="lName" type="text" placeholder="Last Name">
@@ -41,15 +43,15 @@
         </form>
         <p>or</p>
         <p>
-        <a id="withGoogle" class="signInWith"target="_new"
-            href="https://accounts.google.com/o/oauth2/auth/oauthchooseaccount?redirect_uri=storagerelay%3A%2F%2Fhttps%2Fwww.bestbuy.com%3Fid%3Dauth963604&response_type=code%20permission%20id_token&scope=email%20profile%20openid&openid.realm&include_granted_scopes=true&client_id=369075948042-gku8boqssoqo5bdnkpg2s43mscgsk68i.apps.googleusercontent.com&ss_domain=https%3A%2F%2Fwww.bestbuy.com&access_type=offline&prompt=consent&origin=https%3A%2F%2Fwww.bestbuy.com&gsiwebsdk=2&flowName=GeneralOAuthFlow">
-            <img src="https://cdn-icons-png.flaticon.com/512/281/281764.png" alt="">
-            <span>
-                &nbsp Sign up with Google
-            </span> 
-        </a>
-    </p>
-        <p>
+            <a id="withGoogle" class="signInWith" target="_new"
+                href="https://accounts.google.com/o/oauth2/auth/oauthchooseaccount?redirect_uri=storagerelay%3A%2F%2Fhttps%2Fwww.bestbuy.com%3Fid%3Dauth963604&response_type=code%20permission%20id_token&scope=email%20profile%20openid&openid.realm&include_granted_scopes=true&client_id=369075948042-gku8boqssoqo5bdnkpg2s43mscgsk68i.apps.googleusercontent.com&ss_domain=https%3A%2F%2Fwww.bestbuy.com&access_type=offline&prompt=consent&origin=https%3A%2F%2Fwww.bestbuy.com&gsiwebsdk=2&flowName=GeneralOAuthFlow">
+                <img src="https://cdn-icons-png.flaticon.com/512/281/281764.png" alt="">
+                <span>
+                    &nbsp Sign up with Google
+                </span>
+            </a>
+        </p>
+        <p class="para">
             By continuing you agree to our <a href=""> Terms and Conditions</a>, our <a href=""> Privacy Policy</a>,
             and the <a href=""> My Best Buy® Program Terms.</a>
         </p>
