--- a/besbuy HTML/login.html
+++ b/besbuy HTML/login.html
@@ -98,7 +98,7 @@
                 </span>
             </a>
         </p>
-        <p>
+        <p class="para">
             By continuing you agree to our <a href=""> Terms and Conditions</a>, our <a href=""> Privacy Policy</a>,
             and the <a href=""> My Best Buy® Program Terms.</a>
         </p>
