--- a/index.html
+++ b/index.html
@@ -20,12 +20,16 @@
                 <i class="fa-solid fa-magnifying-glass"></i>
             </form>
             <i class="fa-solid fa-map-location-dot"></i>
-            <i class="fa-solid fa-cart-shopping"></i>
+            <div id="cart">
+                <i class="fa-solid fa-cart-shopping"></i>
+                <a href="cart.html">Cart</a>
+                </div>
         </div>
         <div id="hr"></div>
         <div id="nav2">
             <div id="shop">
-                <P><a href="shop.html">Shop</a></P>
+                <P><a href="shop.html">Top Deals</a></P>
+                <p><a href="deal_of_the_day.html">Deal Of The Day</a></p>
                 <P><a href="tataltech-membership">Totaltech membership</a></P>
                 <P><a href="credit-card.html">Credit card</a></P>
                 <P><a href="gift-card.html">Gift card</a></P>
