--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div id="hr"></div>
         <div id="nav2">
             <div id="shop">
-                <P><a href="shop.html">Top Deals</a></P>
+                <P><a href="/besbuy HTML/shop.html">Top Deals</a></P>
                 <p><a href="deal_of_the_day.html">Deal Of The Day</a></p>
                 <P><a href="tataltech-membership">Totaltech membership</a></P>
                 <P><a href="credit-card.html">Credit card</a></P>
