--- a/besbuy HTML/home.html
+++ b/besbuy HTML/home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://kit.fontawesome.com/322b14b2ff.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/bestbuy/bestbuy css/navbar.css">
+    <link rel="stylesheet" href="/bestbuy css/navbar.css">
    
 </style>
 </head>
@@ -20,12 +20,16 @@
                 <i class="fa-solid fa-magnifying-glass"></i>
             </form>
             <i class="fa-solid fa-map-location-dot"></i>
-            <i class="fa-solid fa-cart-shopping"></i>
+            <div id="cart">
+                <i class="fa-solid fa-cart-shopping"></i>
+                <a href="cart.html">Cart</a>
+                </div>
         </div>
         <div id="hr"></div>
         <div id="nav2">
             <div id="shop">
-                <P><a href="shop.html">Shop</a></P>
+                <P><a href="shop.html">Top Deals</a></P>
+                <p><a href="deal_of_the_day.html">Deal Of The Day</a></p>
                 <P><a href="tataltech-membership">Totaltech membership</a></P>
                 <P><a href="credit-card.html">Credit card</a></P>
                 <P><a href="gift-card.html">Gift card</a></P>
