updated in totaltech membership file by Ashish

--- a/besbuy HTML/totaltech-membership.html
+++ b/besbuy HTML/totaltech-membership.html
@@ -180,7 +180,8 @@
                 <p>From TV mounting to installing a smart video doorbell, there’s a huge list of in-home installation
                     services that we’ll do for free when you purchase your product from Best Buy.2 You’ll also get free
                     delivery on Best Buy purchases and free haul-away for most TV and major appliance replacements.5</p>
-                <a href="">See the installs we’ll do for free with a product purchase</a>
+                <!-- <a href="">See the installs we’ll do for free </a> -->
+                <a href="">See the installs we’ll do for free with </a>
             </div>
         </div>
         <div class="box-3">
@@ -327,6 +328,7 @@
 
             </div>
         </div>
+        <div style="height: 1px;width: 95%; margin: auto; background-color:  gray; margin-top: 20px;"></div>
         <div class="box-2">
             <div>
                 <h3> Order & Purchases</h3>
@@ -374,7 +376,7 @@
             </div>
             <div id="contact">
                 <a href="">Sign in or Create Account</a>
-                <div style="height: 1px ; background-color: gray"></div>
+                <div style="height: 1px ; background-color: gray;margin-top: -20px;" ></div>
                 <div class="small-box-1">
                     <h3>Get the latest deals and more.</h3>
                     <input type="email" placeholder="Enter your email">
@@ -390,10 +392,6 @@
                     <i class="fa-brands fa-instagram"></i>
                     <i class="fa-brands fa-pinterest-p"></i>
                     <i class="fa-brands fa-youtube-square"></i>
-
-                </div>
-                <div class="small-box-4">
-                    <a href="">Forums, blogs & more</a>
 
                 </div>
             </div>
