--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <img id="us" src="https://www.bestbuy.com/~assets/bby/_intl/landing_page/images/maps/usa.svg" style="width: 100%" alt="">
                     <h3 class="ms_h3">United States</h3>
                 </div>
-                <div id="mexico" class="ms_column">
+                <div class="ms_column">
                     <img id="mexico" src="https://www.bestbuy.com/~assets/bby/_intl/landing_page/images/maps/mexico.svg" style="width: 100%" alt="">
                     <h3 class="ms_h3">Mexico</h3>
                 </div>
