--- a/besbuy HTML/cart.html
+++ b/besbuy HTML/cart.html
@@ -13,21 +13,28 @@
     <header>
         <div id="nav1">
             <img src="https://pisces.bbystatic.com/image2/BestBuy_US/Gallery/BestBuy_Logo_2020-190616.png;maxHeight=80;maxWidth=136">
+            <div id="menu">
             <i class="fa-solid fa-bars"></i>
+            <a href="Menu">Menu</a>
+            </div>
             <form>
                 <input type="text" placeholder="Search">
                 <i class="fa-solid fa-magnifying-glass"></i>
             </form>
+            <div id="location">
             <i class="fa-solid fa-map-location-dot"></i>
-            <div id="cart">
-            <i class="fa-solid fa-cart-shopping"></i>
-            <a href="cart.html">Cart</a>
+            <a href="">Aiea</a>
             </div>
+            <div id="cart">
+                <i class="fa-solid fa-cart-shopping"></i>
+                <a href="cart.html">Cart</a>
+                </div>
         </div>
         <div class="hr"></div>
         <div id="nav2">
             <div id="shop">
-                <P><a href="shop.html">Shop</a></P>
+                <P><a href="shop.html">Top Deals</a></P>
+                <p><a href="deal_of_the_day.html">Deals of the day</a></p>
                 <P><a href="tataltech-membership">Totaltech membership</a></P>
                 <P><a href="credit-card.html">Credit card</a></P>
                 <P><a href="gift-card.html">Gift card</a></P>
@@ -40,6 +47,7 @@
             </div>
         </div>
     </header>
+
     <div id="content">
     <div id="cartItem">
         <div>
