--- a/besbuy HTML/home.html
+++ b/besbuy HTML/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Homepage</title>
     <script src="https://kit.fontawesome.com/322b14b2ff.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/bestbuy css/navbar.css">
     <link rel="stylesheet" href="/bestbuy css/home.css">
@@ -15,18 +15,28 @@
     <header>
         <div id="nav1">
             <img src="https://pisces.bbystatic.com/image2/BestBuy_US/Gallery/BestBuy_Logo_2020-190616.png;maxHeight=80;maxWidth=136">
+            <div id="menu">
             <i class="fa-solid fa-bars"></i>
+            <a href="Menu">Menu</a>
+            </div>
             <form>
                 <input type="text" placeholder="Search">
                 <i class="fa-solid fa-magnifying-glass"></i>
             </form>
+            <div id="location">
             <i class="fa-solid fa-map-location-dot"></i>
-            <i class="fa-solid fa-cart-shopping"></i>
+            <a href="">Aiea</a>
+            </div>
+            <div id="cart">
+                <i class="fa-solid fa-cart-shopping"></i>
+                <a href="cart.html">Cart</a>
+                </div>
         </div>
-        <div id="hr"></div>
+        <div class="hr"></div>
         <div id="nav2">
             <div id="shop">
-                <P><a href="shop.html">Shop</a></P>
+                <P><a href="shop.html">Top Deals</a></P>
+                <p><a href="deal_of_the_day.html">Deals of the day</a></p>
                 <P><a href="tataltech-membership">Totaltech membership</a></P>
                 <P><a href="credit-card.html">Credit card</a></P>
                 <P><a href="gift-card.html">Gift card</a></P>
