--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/bestbuy css/launching.css">
+    <link rel="stylesheet" href="//bestbuy css/launching.css">
     <script src="/bestbuy js/index.js" defer></script>
 </head>
 <body>
