some updated in totaltech membership file

--- a/besbuy HTML/totaltech-membership.html
+++ b/besbuy HTML/totaltech-membership.html
@@ -379,8 +379,8 @@
                 <div style="height: 1px ; background-color: gray;margin-top: -20px;" ></div>
                 <div class="small-box-1">
                     <h3>Get the latest deals and more.</h3>
-                    <input type="email" placeholder="Enter your email">
-                    <button>sign up</button>
+                    <input type="email" placeholder="Enter email" style="width: 90%;"><br>
+                    <button style="width: 90%;">sign up</button>
                 </div>
                 <div class="small-box-2">
                     <h3>Best buy app</h3>
