--- a/besbuy HTML/deal_of_the_day.html
+++ b/besbuy HTML/deal_of_the_day.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://kit.fontawesome.com/322b14b2ff.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/bestbuy css/navbar.css">
-    <link rel="stylesheet" href="/bestbuy css/deal.css">
+    <link rel="stylesheet" href="/bestbuy/bestbuy css/navbar.css">
+    <link rel="stylesheet" href="/bestbuy/bestbuy css/deal.css">
 </head>
 <body>
-<<<<<<< HEAD
     <header>
         <div id="nav1">
             <img src="https://pisces.bbystatic.com/image2/BestBuy_US/Gallery/BestBuy_Logo_2020-190616.png;maxHeight=80;maxWidth=136"
@@ -37,46 +36,9 @@
                 <p><a href="recentlyviewed.html">Recently Viewed</a></p>
                 <p><a href="order-status.html">Order Status</a></p>
                 <p><a href="saved-items.html">Saved Items</a></p>
-=======
-  <header>
-    <div id="nav1">
-        <img src="https://pisces.bbystatic.com/image2/BestBuy_US/Gallery/BestBuy_Logo_2020-190616.png;maxHeight=80;maxWidth=136">
-        <div id="menu">
-        <i class="fa-solid fa-bars"></i>
-        <a href="Menu">Menu</a>
-        </div>
-        <form>
-            <input type="text" placeholder="Search">
-            <i class="fa-solid fa-magnifying-glass"></i>
-        </form>
-        <div id="location">
-        <i class="fa-solid fa-map-location-dot"></i>
-        <a href="">Aiea</a>
-        </div>
-        <div id="cart">
-            <i class="fa-solid fa-cart-shopping"></i>
-            <a href="cart.html">Cart</a>
->>>>>>> 49fcd803e9313b4e3a3ff4b7f7e535fa9640f6de
             </div>
-    </div>
-    <div class="hr"></div>
-    <div id="nav2">
-        <div id="shop">
-            <P><a href="shop.html">Top Deals</a></P>
-            <p><a href="deal_of_the_day.html">Deals of the day</a></p>
-            <P><a href="tataltech-membership">Totaltech membership</a></P>
-            <P><a href="credit-card.html">Credit card</a></P>
-            <P><a href="gift-card.html">Gift card</a></P>
         </div>
-        <div id="order">
-            <p><a href="account.html">Account</a></p>
-            <p><a href="recentlyviewed.html">Recently Viewed</a></p>
-            <p><a href="order-status.html">Order Status</a></p>
-            <p><a href="saved-items.html">Saved Items</a></p>
-        </div>
-    </div>
-</header>
-
+    </header>
 
        
        
