--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./bestbuy css/launching.css">
-    <script src="/bestbuy js/index.js" defer></script>
+    <script src="./bestbuy js/index.js" defer></script>
 </head>
 <body>
         <div class="ms_main">
