--- a/besbuy HTML/gift-card.html
+++ b/besbuy HTML/gift-card.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>totaltech-membership</title>
     <script src="https://kit.fontawesome.com/322b14b2ff.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/bestbuy/bestbuy css/navbar.css">
    <style>
@@ -327,7 +327,7 @@
     color: rgb(46, 44, 44);
  }
  #container6{
-    height: 1050px;
+    height: 930px;
     width: 100%;
     background-color: #f0f2f4;
     margin-top: 180px;
@@ -366,7 +366,7 @@
     width: 94%;
     border: 1px solid grey;
     margin: auto;
-    margin-top: -850px;
+    margin-top: -700px;
 }
 #container8{
     display: flex;
@@ -444,6 +444,7 @@
 </head>
 <body>
     <header>
+        
         <div id="nav1">
             <img src="https://pisces.bbystatic.com/image2/BestBuy_US/Gallery/BestBuy_Logo_2020-190616.png;maxHeight=80;maxWidth=136">
             <i class="fa-solid fa-bars"></i>
