--- a/besbuy HTML/account.html
+++ b/besbuy HTML/account.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best Buy:Create an Account</title>
     <link rel="stylesheet" href="bestbuy/bestbuy css/launching.css">
+    <link rel="stylesheet" href="https://github.com/AnshulKumarYadav/bestbuy/blob/master/bestbuy%20css/account.css">
         <link rel="stylesheet" href="/bestbuy css/account.css">
 </head>
 
