--- a/besbuy HTML/account.html
+++ b/besbuy HTML/account.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best Buy:Create an Account</title>
-    <link rel="stylesheet" href="bestbuy/bestbuy css/launching.css">
+    <link rel="stylesheet" href="/bestbuy/bestbuy css/launching.css">
      <link rel="stylesheet" href="/bestbuy css/account.css">
      <link rel="stylesheet" href="./bestbuy css/account.css">
 </head>
