--- a/besbuy HTML/account.html
+++ b/besbuy HTML/account.html
@@ -8,7 +8,7 @@
     <title>Best Buy:Create an Account</title>
     
      <link rel="stylesheet" href="/bestbuy css/account.css">
-     <link rel="stylesheet" href="/bestbuy/bestbuy css/launching.css">
+     <link rel="stylesheet" href="/bestbuy/bestbuy css/account.css">
      <!-- <link rel="stylesheet" href="./bestbuy css/account.css"> -->
 </head>
 
