--- a/besbuy HTML/login.html
+++ b/besbuy HTML/login.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In to Best Buy</title>
     <link rel="stylesheet" href="/bestbuy css/account.css">
+    <link rel="stylesheet" href="/bestbuy/bestbuy css/account.css">
     <script src="https://kit.fontawesome.com/322b14b2ff.js" crossorigin="anonymous"></script>
     <style>
         #form #pass+p {
@@ -130,3 +131,4 @@
 
 </html>
 <script src="/bestbuy js/login.js"></script>
+<script src="/bestbuy/bestbuy js/login.js"></script>
