--- a/besbuy HTML/profile.html
+++ b/besbuy HTML/profile.html
@@ -7,6 +7,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Document</title>
       <link rel="stylesheet" href="/bestbuy css/profile.css">
+      <link rel="stylesheet" href="/bestbuy/bestbuy css/profile.css">
       <script src="https://kit.fontawesome.com/322b14b2ff.js" crossorigin="anonymous"></script>
       <script src="https://kit.fontawesome.com/9d2418a29e.js" crossorigin="anonymous"></script>
       <script src="https://kit.fontawesome.com/24c494a6b6.js" crossorigin="anonymous"></script>
