--- a/besbuy HTML/profile.html
+++ b/besbuy HTML/profile.html
@@ -5,7 +5,7 @@
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Document</title>
+      <title>profile</title>
       <link rel="stylesheet" href="/bestbuy css/profile.css">
       <link rel="stylesheet" href="/bestbuy/bestbuy css/profile.css">
       <script src="https://kit.fontawesome.com/322b14b2ff.js" crossorigin="anonymous"></script>
