--- a/besbuy HTML/account.html
+++ b/besbuy HTML/account.html
@@ -60,7 +60,8 @@
         </p>
         <hr>
         <p id="signIn"><b> Already have an account?</b>
-            <a href="login.html"> Sign in</a>
+            <!-- <a href="login.html"> Sign in</a> -->
+            <a href="credit-card.html">Credit card</a>
         </p>
     </div>
 
