link account page

--- a/besbuy HTML/login.html
+++ b/besbuy HTML/login.html
@@ -105,7 +105,7 @@
         </p>
         <hr>
         <p id="signIn"><b> Don't have an account?</b>
-            <a href="/besbuy HTML/account.html"> Create an account</a>
+            <a href="account.html"> Create an account</a>
         </p>
     </div>
 
