link account page

--- a/besbuy HTML/account.html
+++ b/besbuy HTML/account.html
@@ -16,13 +16,13 @@
     <nav>
         <div>
             <div>
-                <a href="/besbuy HTML/home.html"><img
+                <a href="home.html"><img
                         src="https://www.bestbuy.com/~assets/bby/_com/header-footer/images/bby_logo-a7e90594729ed2e119331378def6c97e.png"
                         alt="no image"></a>
             </div>
             <div></div>
             <div>
-                <a href="/besbuy HTML/home.html">
+                <a href="home.html">
                     <p>Return to previous page</p>
                 </a>
             </div>
