link icon in profile page

--- a/besbuy HTML/profile.html
+++ b/besbuy HTML/profile.html
@@ -130,7 +130,7 @@
                               </div>
                               <div>
                                     <center>
-                                          <p style="font-size: 18px;font-weight: 550;">Add Your Products</p>
+                                          <p style="font-size: 18px;font-weight: 550;">Start Shopping</p>
                                           <span style="font-size: 15px; color: gray;"> Your items will show up here –
                                                 along with
                                                 warranty info, support & service options, and more.</span>
@@ -172,11 +172,11 @@
                   <p><a href="">Check your order Status</a></p>
             </div>
             <div>
-                  <img src="/img/truck-fast-solid.svg" alt="">
+                  <img src="/bestbuy/img/truck-fast-solid.svg" alt="">
                   <p><a href="">Shipping Delivery and store pickup</a></p>
             </div>
             <div>
-                  <img src="/img/retweet-solid.svg" alt="">
+                  <img src="/bestbuy/img/retweet-solid.svg" alt="">
                   <p><a href="">Returns and Exchanges</a></p>
             </div>
 
