link add in profile page

--- a/besbuy HTML/profile.html
+++ b/besbuy HTML/profile.html
@@ -23,7 +23,6 @@
       </div>
       <div id="navbar">
             <div id="menu">
-                
                   <img src="https://pisces.bbystatic.com/image2/BestBuy_US/Gallery/BestBuy_Logo_2020-190616.png;maxHeight=80;maxWidth=136"
                         alt="">
                   <p><i class="fa-solid fa-bars"></i> Menu</p>
@@ -42,14 +41,14 @@
       </div>
       <hr>
       <div id="navBottom">
-            <div><a href="">Shop</a> </div>
-            <div><a href="">Totaltech membership</a> </div>
-            <div> <a href="">Credit card</a></div>
-            <div><a href="">Gift card</a> </div>
+            <div><a href="shop.html">Shop</a> </div>
+            <div><a href="totaltech-membership.html">Totaltech membership</a> </div>
+            <div> <a href="credit-card.html">Credit card</a></div>
+            <div><a href="gift-card.html">Gift card</a> </div>
             <div class="bold"><a href=""> <i class="fa-solid fa-circle-user"></i> Account</a> </div>
-            <div class="bold"><a href="">Recently Viewed</a> </div>
-            <div class="bold"><a href="">Order Status</a> </div>
-            <div class="bold"><a href="">Saved Items</a> </div>
+            <div class="bold"><a href="recentlyviewed.html">Recently Viewed</a> </div>
+            <div class="bold"><a href="order-status.html">Order Status</a> </div>
+            <div class="bold"><a href="saved-items.html">Saved Items</a> </div>
       </div>
       <div id="stripBottom">
             <div>
@@ -75,7 +74,7 @@
                         <div class="top">
                               <img src="https://pisces.bbystatic.com/image2/vector/BestBuy_US/Gallery/my-bby-stacked-light-66297.svg"
                                     alt="">
-                              <p>Member ID: ‍5206197257</p>
+                              <p>Member ID: ‍5206795257</p>
                         </div>
                         <div style="border:1px solid gray; border-radius: 0px 0px 4px 4px;border-top: 0px;">
                               <div style="display: flex;justify-content: space-between;margin: 0% 20%;color: green;">
@@ -125,7 +124,7 @@
                                           <span style="font-size: 15px; color: gray;"> Add items you own (no matter
                                                 where you bought them)
                                                 to see support & service options.</span>
-                                          <br><br> <button class="cart">Add a Products</button>
+                                          <br><br> <button class="cart" onclick="shop.html">Add a Products</button>
                                     </center>
                               </div>
                               <div>
@@ -134,7 +133,7 @@
                                           <span style="font-size: 15px; color: gray;"> Your items will show up here –
                                                 along with
                                                 warranty info, support & service options, and more.</span>
-                                          <br><br> <button class="cart">Shop Now</button>
+                                          <br><br> <button onclick="cart.html" class="cart">Shop Now</button>
                                     </center>
                               </div>
                         </div>
@@ -228,7 +227,7 @@
                   <a href=""> Discover & Learn </a><br>
             </div>
             <div style="background-color: white;padding: 0px 25px;">
-                  <p><a style="color: #0046c3;" href="">
+                  <p><a style="color: #0046c3;" href="account.html">
                               sign in or create account
                         </a></p>
                   <h4>Get the latest deals and more.</h4>
