--- a/besbuy HTML/saved-items.html
+++ b/besbuy HTML/saved-items.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://kit.fontawesome.com/322b14b2ff.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/bestbuy css/navbar.css">
-    <link rel="stylesheet" href="/bestbuy css/saved-items.css">
-    <script src="/bestbuy js/saved-items.js" defer></script>
+    <link rel="stylesheet" href="/bestbuy/bestbuy css/navbar.css">
+    <link rel="stylesheet" href="/bestbuy/bestbuy css/saved-items.css">
+    <script src="/bestbuy/bestbuy js/saved-items.js" defer></script>
 </head>
 <body>
     <header>
